force-app/main/default/objects/Account/fields/demo_checkbox_test__c.field-meta.xml
<CustomField>
    <fullName>demo_checkbox_test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>demo checkbox test</label>
    <type>Checkbox</type>
</CustomField>