force-app/main/default/objects/Account/fields/Demo_Field__c.field-meta.xml
<CustomField>
    <fullName>Demo_Field__c</fullName>
    <label>Demo Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>