force-app/main/default/objects/Account/fields/Hiring_type__c.field-meta.xml
<CustomField>
    <fullName>Hiring_type__c</fullName>
    <label>Hiring type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Hiring_type</valueSetName>
    </valueSet>
</CustomField>